--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NovaCMS - Headless Content Management System</title>
+    <title>fieldstack - Headless Content Management System</title>
     <meta name="description" content="Open-source headless CMS with auto-generated REST/GraphQL APIs and dynamic admin dashboard for managing SQL databases" />
-    <meta name="author" content="NovaCMS" />
+    <meta name="author" content="fieldstack" />
 
-    <meta property="og:title" content="NovaCMS - Headless Content Management System" />
+    <meta property="og:title" content="fieldstack - Headless Content Management System" />
     <meta property="og:description" content="Open-source headless CMS with auto-generated REST/GraphQL APIs and dynamic admin dashboard" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@NovaCMS" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@fieldstack" />
   </head>
 
   <body>
