Field Update fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <meta property="og:title" content="fieldstack - Headless Content Management System" />
     <meta property="og:description" content="Open-source headless CMS with auto-generated REST/GraphQL APIs and dynamic admin dashboard" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fieldstack.dev" />
+  <link rel="icon" type="image/x-icon" href="../public/fieldstack_logo.svg">
 
+    <meta property="og:image" content="https://fieldstack.dev/og-image.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@fieldstack" />
   </head>
